Fix role