@@ -6,7 +6,6 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -15,45 +14,44 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 public class SecurityConfig {
 
     @Bean
-    public SecurityFilter securityFilter() {
+    public SecurityFilter securityFilter(){
         return new SecurityFilter();
     }
 
     @Bean
-    public UserService userService() {
+    public UserService userService(){
         return new UserService();
     }
 
+
     @Bean
-    public BCryptPasswordEncoder passwordEncoder() {
+    public BCryptPasswordEncoder passwordEncoder(){
         return new BCryptPasswordEncoder();
     }
 
     @Bean
-    public DaoAuthenticationProvider authenticationProvider() {
+    public DaoAuthenticationProvider authenticationProvider(){
         DaoAuthenticationProvider daoAuthenticationProvider = new DaoAuthenticationProvider();
         daoAuthenticationProvider.setUserDetailsService(userService()); // récupérer le user associer a l'email
         daoAuthenticationProvider.setPasswordEncoder(passwordEncoder()); // vérifier le mdp
         return daoAuthenticationProvider;
     }
 
-    //Ici on filtre les accès
     @Bean
     public SecurityFilterChain apiSecurity(HttpSecurity http) throws Exception {
+        // 403
         return http
-                .csrf(AbstractHttpConfigurer::disable)
+                .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests((auth) -> auth
-                                .requestMatchers("/api/**").permitAll()
-                                .requestMatchers("/api/client/**").hasAnyAuthority("CLIENT")
-                                .requestMatchers("/api/dashboard/**").hasAnyAuthority("ADMIN")
-//                              .requestMatchers("/user").hasAnyAuthority("CLIENT")
-                                .anyRequest().permitAll()
+                        .requestMatchers("/api/open/**").permitAll()
+                        .requestMatchers("/api/client/**").hasAnyAuthority("CLIENT")
+                        .requestMatchers("/api/dashboard/**").hasAnyAuthority("ADMIN")
+                        .anyRequest().permitAll()
                 )
                 .cors(Customizer.withDefaults())
                 .addFilterBefore(securityFilter(), UsernamePasswordAuthenticationFilter.class)
@@ -68,7 +66,7 @@ public class SecurityConfig {
         config.addAllowedHeader("X-XSRF-TOKEN");
         config.addAllowedHeader("Content-Type");
         config.setAllowedMethods(Arrays.asList("GET", "HEAD", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:8080"));
+        config.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
         config.setAllowCredentials(true); // This is important since we are using session cookies
         source.registerCorsConfiguration("/**", config);
         return source;
